# python-scrolltext

./: README.md  README.technical-documentation.md  setup.cfg  utils_tests.py
.github/workflows/: pylint.yml  python-app.yml
scrolltext/: __init__.py  cli.py  config.py  cursestext.py  getchtimeout.py  linescroller.py  utils.py
tests/: utils_tests.py
