[metadata]
name = python-scrolltext
version = 0.0.3
author = Jim Dee Kepler
author_email = jimdee@gmail.com
license = GPLv3
description = A little toy for scrolling text.
long_description = file: README.md
long_description_content_type = text/markdown
license.file = "LICENSE"
requires_python = ">=3.4"
url = https://github.com/jimdeekepler/python-scrolltext
classifiers =
    Development Status :: 1 - Planning
    Environment :: Console
    Intended Audience :: Developers
    License :: OSI Approved :: GNU General Public License v3 or later (GPLv3+)
    Operating System :: OS Independent
    Programming Language :: Python :: 3

[options]
packages = find:
include_package_data = True
python_requires = >=3.4
test_suite =
    tests
install_requires =

[options.entry_points]
console_scripts =
    scrolltext = scrolltext.cli:main
